extract method from long sorrounding method